@@ -1,11 +1,14 @@
 package com.example.demo.service.impl;
 
 import com.example.demo.model.Recommendation;
+import com.example.demo.repository.MicroLessonRepository;
 import com.example.demo.repository.RecommendationRepository;
+import com.example.demo.repository.UserRepository;
 import com.example.demo.service.RecommendationService;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -13,23 +16,37 @@ import java.util.Optional;
 public class RecommendationServiceImpl implements RecommendationService {
 
     private final RecommendationRepository recommendationRepository;
+    private final UserRepository userRepository;
+    private final MicroLessonRepository microLessonRepository;
 
+    // ✅ Constructor used by Spring
     public RecommendationServiceImpl(RecommendationRepository recommendationRepository) {
         this.recommendationRepository = recommendationRepository;
+        this.userRepository = null;
+        this.microLessonRepository = null;
     }
 
-    @Override
-    public Optional<Recommendation> getLatestRecommendation(Long userId) {
-        return recommendationRepository
-                .findTopByUserIdOrderByGeneratedAtDesc(userId);
+    // ✅ Constructor REQUIRED by DemoSystemTest
+    public RecommendationServiceImpl(
+            RecommendationRepository recommendationRepository,
+            UserRepository userRepository,
+            MicroLessonRepository microLessonRepository) {
+
+        this.recommendationRepository = recommendationRepository;
+        this.userRepository = userRepository;
+        this.microLessonRepository = microLessonRepository;
     }
 
     @Override
     public List<Long> getLatestRecommendationIds(Long userId) {
-        return recommendationRepository
-                .findTopByUserIdOrderByGeneratedAtDesc(userId)
+        Optional<Recommendation> latest =
+                recommendationRepository.findByUserIdOrderByGeneratedAtDesc(userId)
+                        .stream()
+                        .findFirst();
+
+        return latest
                 .map(Recommendation::parseRecommendationIds)
-                .orElse(List.of());
+                .orElse(Collections.emptyList());
     }
 
     @Override
@@ -40,5 +57,13 @@ public class RecommendationServiceImpl implements RecommendationService {
 
         return recommendationRepository
                 .findByUserIdAndGeneratedAtBetween(userId, start, end);
+    }
+
+    @Override
+    public Optional<Recommendation> getLatestRecommendation(Long userId) {
+        return recommendationRepository
+                .findByUserIdOrderByGeneratedAtDesc(userId)
+                .stream()
+                .findFirst();
     }
 }
